samples/_failures_safe/1761561561_8057c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2d9dc4d.c: In function ‘main’:
./samples/SAFE/__tmp_b2d9dc4d.c:147:5: error: expected expression at end of input
  147 |     analyze_log_level(
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b2d9dc4d.c:147:5: error: too few arguments to function ‘analyze_log_level’
./samples/SAFE/__tmp_b2d9dc4d.c:75:6: note: declared here
   75 | void analyze_log_level(struct LogEntry* entries, int count) {
      |      ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b2d9dc4d.c:147:5: error: expected declaration or statement at end of input
  147 |     analyze_log_level(
      |     ^~~~~~~~~~~~~~~~~
